# pla-showdown

./: .gitignore  Cargo.toml  bacon.toml
assets/: natures.toml
assets/moves/: absorb.toml  acid_armor.toml  acid_spray.toml  aerial_ace.toml  air_cutter.toml  air_slash.toml  ancient_power.toml  aqua_jet.toml  aqua_tail.toml  astonish.toml  aura_sphere.toml  baby-doll_eyes.toml  barb_barrage.toml  bite.toml  bitter_malice.toml  bleakwind_storm.toml  blizzard.toml  brave_bird.toml  bubble.toml  bug_buzz.toml  bulk_up.toml  bulldoze.toml  bullet_punch.toml  calm_mind.toml  ceaseless_edge.toml  charge_beam.toml  chloroblast.toml  close_combat.toml  confusion.toml  cross_poison.toml  crunch.toml  crush_grip.toml  dark_pulse.toml  dark_void.toml  dazzling_gleam.toml  dire_claw.toml  double-edge.toml  double_hit.toml  draco_meteor.toml  dragon_claw.toml  (+137 more)
assets/species/: abomasnow.toml  abra.toml  aipom.toml  alakazam.toml  ambipom.toml  arcanine-hisui.toml  arceus.toml  avalugg-hisui.toml  azelf.toml  barboach.toml  basculegion-female.toml  basculegion-male.toml  basculin.toml  bastiodon.toml  beautifly.toml  bergmite.toml  bibarel.toml  bidoof.toml  blissey.toml  bonsly.toml  braviary-hisui.toml  bronzong.toml  bronzor.toml  budew.toml  buizel.toml  buneary.toml  burmy.toml  carnivine.toml  cascoon.toml  chansey.toml  chatot.toml  cherrim.toml  cherubi.toml  chimchar.toml  chimecho.toml  chingling.toml  clefable.toml  clefairy.toml  cleffa.toml  combee.toml  (+221 more)
assets/statuses/: burn.toml  crit_boost.toml  drowsy.toml  fixated.toml  (+12 more)
src/: data.rs  main.rs  parsing.rs
(+27 files in other folders)
