[package]
name = "pla_showdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
